--- a/templates/animePage.html
+++ b/templates/animePage.html
@@ -1,5 +1,7 @@
 {% extends "header.html" %}
 {% block  content %}
-    <h1> {{romaji}} </h1>
-    <img src = "{{imgURL}}">
+    {% for i in range(n) %}
+        <h1> {{titles[i]}} </h1>
+        <img src = "{{imgURLs[i]}}">
+    {% endfor %}
 {% endblock content %}
