--- a/templates/header.html
+++ b/templates/header.html
@@ -11,18 +11,15 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <ul class="nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="/">Home</a>
+          <a class="nav-link active" href="{{url_for('home_view')}}">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/about">About</a>
+          <a class="nav-link" href="{{url_for('about_view')}}">About</a>
         </li>
       </ul>
       <ul class="nav" style="align-self:flex-end">
         <li class="nav-item">
           <a class="nav-link" href="#">Login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Register</a>
         </li>
       </ul>
     </nav>
