--- a/templates/header.html
+++ b/templates/header.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   </head>
   <body>
+    <!-- Top bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <ul class="nav mr-auto">
         <li class="nav-item">
@@ -20,19 +21,14 @@
       </ul>
       <ul class="nav" style="align-self:flex-end">
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('login_view') }}">Login</a>
+          {% if login == None %}
+            <a class="nav-link" href="{{ url_for('login')}}">Login with AniList</a>
+          {% else %}
+            <a class="nav-link" href="{{ url_for('logout')}}">Logout</a>
+          {% endif %}
         </li>
       </ul>
     </nav>
-    {% with messages = get_flashed_messages(with_categories=true) %}
-      {% if messages %}
-        {% for category, message in messages %}
-          <div class="alert alert-{{ category }}">
-            {{ message }}
-          </div>
-        {% endfor %}
-      {% endif %}
-    {% endwith %}
     {% block content %} {% endblock content %}
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
