--- a/templates/user.html
+++ b/templates/user.html
@@ -1,5 +1,5 @@
 {% extends "header.html" %}
 {% block  content %}
     <h1> {{ username }} </h1>
-
+    <img src = "{{imgURL}}" >
 {% endblock content %}
