--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,4 @@
-{% extends "header.html" %}
+{% extends "layout.html" %}
 {% block  content %}
     <h1> About This Webapp </h1>
 {% endblock content %}
