--- a/templates/home.html
+++ b/templates/home.html
@@ -1,11 +1,12 @@
-{% extends "header.html" %}
+{% extends "layout.html" %}
 {% block content %}
     <div class="container">
         <div class="col text-center" style="padding-top: 30%;">
             <h1>Welcome to the Home Page!</h1>
-            <form method="POST" action = "{{url_for('anime_page_view')}}">
+            <form method="GET" action = "{{url_for('anime_results_view')}}">
                 <div class="form-group" style="padding-top: 5%;">
-                    <input class="text-center" name="search-bar" type="text" placeholder="Enter an anime name" style="width: 40%;">
+                    <input class="text-center" name="search" type="text" placeholder="Enter an anime name" style="width: 40%;">
+                    <input type="number" name="page" style="display: none;" value="1"> 
                     <input type="submit" style="display: none">
                 </div>
             </form>
