--- a/templates/anime.html
+++ b/templates/anime.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
 {% block  content %}
-<h1> About This Webapp </h1>
+<h1> {{ name }} </h1>
+<img src="{{ imgURL }}">
 {% endblock content %}
