Added deleting a list entry
Cleaned up a bit of code.

--- a/templates/resultPage.html
+++ b/templates/resultPage.html
@@ -9,7 +9,7 @@
         </td>
         <td>
             <h2 style="padding-top: 3%;">
-                <a href="{{url_for('anime_view', anime_name = titles[i]) }}">{{titles[i]}}</a>
+                <a href="{{url_for('anime_view', anime_id = ids[i]) }}">{{titles[i]}}</a>
             </h2>
         </td>
     </tr>
