--- a/templates/anime.html
+++ b/templates/anime.html
@@ -5,17 +5,18 @@
         <div class="row">
             <img src="{{ anime_info['img_URL'] }}">
             <div class = "col-10"> 
-                <h1 class="display-4"> {{ anime_info['english'] }} </h1>
+                <h1 class="display-4"> {{ anime_info['romaji'] }} </h1>
                 <hr class="my-4">
                 <p> {{ anime_info['description'] }}</p>
                 <div class="dropdown">
                     {% if inList %}
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    {{ anime_info['status'] }}
+                        {{ anime_info['status'] }}
                     </button>
                     {% else %}
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Add to List
+                        Add to List
+                    </button>
                     {% endif %}
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                         {% if not inList %}
@@ -27,6 +28,7 @@
                         <a class="dropdown-item" href="{{ url_for('change', anime_id = anime_info['id'], change = 'COMPLETED') }}">Completed</a>
                         <a class="dropdown-item" href="{{ url_for('change', anime_id = anime_info['id'], change = 'PAUSED') }}">Pause</a>
                         <a class="dropdown-item" href="{{ url_for('change', anime_id = anime_info['id'], change = 'DROPPED') }}">Drop</a>
+                        <a class="dropdown-item" href="{{ url_for('change', anime_id = anime_info['id'], media_list_id = anime_info['media_list_id'], change = 'DELETE') }}">Delete</a>
                         {% endif %}
                     </div>
                 </div>
@@ -52,10 +54,10 @@
             <p> End Date: {{ anime_info['end_date'] }} </p>
         </div>
         <div class="col-sm">
-          One of three columns
+            One of three columns
         </div>
         <div class="col-sm">
-          One of three columns
+            One of three columns
         </div>
       </div>
 </div>
