--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,6 +20,9 @@
       <li class="nav-item">
         <a class="nav-link" href="{{url_for('about_view')}}">About</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{url_for('random_anime')}}">Random</a>
+      </li>
     </ul>
     <ul class="nav" style="align-self:flex-end">
       <li class="nav-item">
