--- a/templates/layout.html
+++ b/templates/layout.html
@@ -25,13 +25,18 @@
       </li>
     </ul>
     <ul class="nav" style="align-self:flex-end">
-      <li class="nav-item">
         {% if login == none %}
-        <a class="nav-link" href="{{ url_for('login')}}">Login with AniList</a>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('login')}}">Login with AniList</a>
+        </li>
         {% else %}
-        <a class="nav-link" href="{{ url_for('logout')}}">Logout</a>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('user_view') }}"> {{ session['username'] }}</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('logout')}}">Logout</a>
+        </li>
         {% endif %}
-      </li>
     </ul>
   </nav>
 
