--- a/templates/user.html
+++ b/templates/user.html
@@ -12,7 +12,6 @@
         </div>
     </div>
 </div>
-<!-- COMPELTED = 0, PLANNING = 1, DROPPED = 2, HOLD = 3, DROPPED = 4 -->
 <style>
     table {
       font-family: arial, sans-serif;
@@ -30,21 +29,21 @@
       background-color: #e9ecef;
     }
 </style>   
-<div class="container-fluid">
-
+<div class="container-fluid" style="font-size: 25px">
+    <!-- list_info[COMPLETED = 0, PLANNING = 1, DROPPED = 2, HOLD = 3, WATCHING = 4] -->
     <h3> Watching </h3>
     <table>
         <tr>
-            <th>Title</th>
-            <th>Score</th>
+            <th class="col-11">Title</th>
+            <th class="col-1">Score</th>
         </tr>
         {% for anime in list_info[4] %}
         <tr>
-            <td>
-                <img src="{{ list_info[4][anime][1] }}">
-                <a href="{{url_for('anime_view', anime_id = list_info[4][anime][2]) }}">{{ anime }}</a>
+            <td class="d-flex align-items-center">
+                <img style="float:left" src="{{ list_info[4][anime][1] }}">
+                <a href="{{url_for('anime_view', anime_id = list_info[4][anime][2]) }}" class="ml-5">{{ anime }}</a>
             </td>
-            <td>{{ list_info[4][anime][0] }}</td>
+            <td class="text-center">{{ list_info[4][anime][0] }}</td>
         </tr>
         {% endfor %}
     </table>
@@ -52,16 +51,16 @@
     <h3>Completed</h3>
     <table>
         <tr>
-            <th>Title</th>
-            <th>Score</th>
+            <th class="col-11">Title</th>
+            <th class="col-1">Score</th>
         </tr>
         {% for anime in list_info[0] %}
         <tr>
-            <td>
-                <img src="{{ list_info[0][anime][1] }}">
-                <a href="{{url_for('anime_view', anime_id = list_info[0][anime][2]) }}">{{ anime }}</a>
+            <td class="d-flex align-items-center">
+                <img style="float:left" src="{{ list_info[0][anime][1] }}">
+                <a href="{{url_for('anime_view', anime_id = list_info[0][anime][2]) }}" class="ml-5">{{ anime }}</a>
             </td>
-            <td>{{ list_info[0][anime][0] }}</td>
+            <td class="text-center">{{ list_info[0][anime][0] }}</td>
         </tr>
         {% endfor %}
     </table>
@@ -69,16 +68,16 @@
     <h3> Hold </h3>
     <table>
         <tr>
-            <th>Title</th>
-            <th>Score</th>
+            <th class="col-11">Title</th>
+            <th class="col-1">Score</th>
         </tr>
         {% for anime in list_info[3] %}
         <tr>
-            <td>
-                <img src="{{ list_info[3][anime][1] }}">
-                <a href="{{url_for('anime_view', anime_id = list_info[3][anime][2]) }}">{{ anime }}</a>
+            <td class="d-flex align-items-center">
+                <img style="float:left" src="{{ list_info[3][anime][1] }}">
+                <a href="{{url_for('anime_view', anime_id = list_info[3][anime][2]) }}" class="ml-5">{{ anime }}</a>
             </td>
-            <td>{{ list_info[3][anime][0] }}</td>
+            <td class="text-center">{{ list_info[3][anime][0] }}</td>
         </tr>
         {% endfor %}
     </table>
@@ -86,16 +85,16 @@
     <h3> Dropped </h3>
     <table>
         <tr>
-            <th>Title</th>
-            <th>Score</th>
+            <th class="col-11">Title</th>
+            <th class="col-1">Score</th>
         </tr>
         {% for anime in list_info[2] %}
         <tr>
-            <td>
-                <img src="{{ list_info[2][anime][1] }}">
-                <a href="{{url_for('anime_view', anime_id = list_info[2][anime][2]) }}">{{ anime }}</a>
+            <td class="d-flex align-items-center">
+                <img style="float:left" src="{{ list_info[2][anime][1] }}">
+                <a href="{{url_for('anime_view', anime_id = list_info[2][anime][2]) }}" class="ml-5">{{ anime }}</a>
             </td>
-            <td>{{ list_info[2][anime][0] }}</td>
+            <td class="text-center">{{ list_info[2][anime][0] }}</td>
         </tr>
         {% endfor %}
     </table>
@@ -103,16 +102,16 @@
     <h3>Planning</h3>
     <table>
         <tr>
-            <th>Title</th>
-            <th>Score</th>
+            <th class="col-11">Title</th>
+            <th class="col-1">Score</th>
         </tr>
         {% for anime in list_info[1] %}
         <tr>
-            <td>
-                <img src="{{ list_info[1][anime][1] }}">
-                <a href="{{url_for('anime_view', anime_id = list_info[1][anime][2]) }}">{{ anime }}</a>
+            <td class="d-flex align-items-center">
+                <img style="float:left" src="{{ list_info[1][anime][1] }}">
+                <a href="{{url_for('anime_view', anime_id = list_info[1][anime][2]) }}" class="ml-5">{{ anime }}</a>
             </td>
-            <td>{{ list_info[1][anime][0] }}</td>
+            <td class="text-center">{{ list_info[1][anime][0] }}</td>
         </tr>
         {% endfor %}
     </table>
