--- a/templates/home.html
+++ b/templates/home.html
@@ -2,15 +2,10 @@
 {% block content %}
 <div class="container">
     <div class="col text-center" style="padding-top: 30%;">
-        <h1>Welcome to the Home Page!</h1>
-        <form method="GET" action="{{url_for('anime_results_view')}}">
-            <div class="form-group" style="padding-top: 5%;">
-                <input class="text-center" name="search" type="text" placeholder="Enter an anime name"
-                    style="width: 40%;">
-                <input type="number" name="page" style="display: none;" value="1">
-                <input type="submit" style="display: none">
-            </div>
-        </form>
+        <h1>Welcome To Find Next Anime!</h1>
+        <div class="d-grid gap-2 col-6 mx-auto">
+            <a class="btn btn-primary" type="button" href="{{url_for('recommendation_view')}}">Get Recommendations</a>
+        </div>
     </div>
 </div>
 {% endblock content %}
