--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,7 +11,7 @@
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 
-<body class="d-flex flex-column min-vh-100">
+<body class="d-flex flex-column min-vh-100" style="background-color: #6c757d;">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <ul class="nav mr-auto">
       <li class="nav-item">
@@ -22,6 +22,9 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{{url_for('random_anime')}}">Random</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{url_for('search_view')}}">Search</a>
       </li>
     </ul>
     <ul class="nav" style="align-self:flex-end">
