Made the app ready for depolyment
Changed some text like with the homepage. Fixed issue where it throws an error if not logged in. Added favicon.

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
 {% block  content %}
-<h1> About This Webapp </h1>
+<!-- Add how to use website then add our life story and donation page -->
+<h1>Made by Randy Nguyen and Tarun Maddineni using the AniList API</h1>
 {% endblock content %}
