--- a/templates/home.html
+++ b/templates/home.html
@@ -2,9 +2,9 @@
 {% block content %}
 <div class="container">
     <div class="col text-center" style="padding-top: 30%;">
-        <h1>Welcome To Find Next Anime!</h1>
+        <h1>Don't Know What To Watch?</h1>
         <div class="d-grid gap-2 col-6 mx-auto">
-            <a class="btn btn-primary" type="button" href="{{url_for('recommendation_view')}}">Get Recommendations</a>
+            <a class="btn btn-primary" type="button" href="{{url_for('recommendation_view')}}">Find My Next Anime</a>
         </div>
     </div>
 </div>
