--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,7 @@
 <head>
   <title>Find My Next Anime</title>
   <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+  <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
