Added about page
Splitting the main file into multiple files is too hard

--- a/templates/about.html
+++ b/templates/about.html
@@ -41,7 +41,7 @@
                         <h2>Tarun Maddineni</h2>
                         <p>Some text that describes me lorem ipsum ipsum lorem.</p>
                         <p>tarun.maddieni@yahoo.com</p>
-                        <p>add more links if needed like linkedin</p>
+                        <p><a href="https://www.linkedin.com/in/tmadd18/">Linkedin</a></p>
                         <a class="btn btn-primary" href="https://anilist.co/user/tmadd18/" role="button" style="background-color: #6c757d; width: 100%; color: black; border: none">AniList List</a>
                     </div>
                 </div>
